# pakupaku

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  setup.sh  uninstall.sh
data/dictionaries/: fillers.txt  repetition_markers.txt  tech_terms.txt
scripts/: check_permissions.py  com.pakupaku.daemon.plist  install_launchd.sh  open_permissions.sh  patch_ginza.py
scripts/hammerspoon/: pakupaku.lua
src/pakupaku/: __init__.py  bg_stt.py  cli.py  clipboard.py  config.py  daemon.py  feedback.py  filler.py  ipc.py  model_loader.py  parser.py  pipeline.py  punctuation.py  recorder.py  repetition.py  router.py  slm.py  stt.py  tokenizer.py  types.py  vad.py
tests/: conftest.py  test_bg_stt.py  test_cli_plist.py  test_filler.py  test_ipc.py  test_pipeline.py  test_punctuation.py  test_repetition.py  test_router.py  test_slm_safety.py  test_types.py
