[project]
name = "pakupaku"
version = "0.1.0"
description = "ローカル動作する日本語向け音声入力後処理ツール"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Kaito-Tsuruishi", email = "167148872+Kaito-Tsuruishi@users.noreply.github.com" }
]
license = { text = "MIT" }

dependencies = [
    # 形態素解析・係り受け解析
    "sudachipy>=0.6.10",
    "sudachidict-full",
    "ginza",
    "ja-ginza",
    # 機械学習・モデル管理
    "huggingface-hub>=0.25",
    "transformers>=4.45",
    "mlx>=0.20",
    "mlx-lm>=0.20",
    "mlx-whisper>=0.4.3",
    # 数値処理
    "numpy",
    # 音声・VAD
    "sounddevice>=0.5",
    "silero-vad>=6.2",
    # macOS 統合
    "pyobjc>=10",
    "mlx-vlm>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
paku = "pakupaku.cli:main"
pakupaku = "pakupaku.cli:main"  # 互換エイリアス

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pakupaku"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
]
ignore = [
    "E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
